--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
@@ -42,6 +43,7 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.13",
