--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-logger": "^3.0.6"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
