--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios --simulator='iPhone 15 Pro Max'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -23,6 +24,8 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-calendars": "^1.1305.0",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gifted-charts": "^1.4.10",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
@@ -32,6 +35,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
