--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-image-crop-picker": "^0.41.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-popover": "^2.1.3",
