--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
