--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-blob-util": "^0.19.9",
     "react-native-calendars": "^1.1305.0",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gifted-charts": "^1.4.10",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-pdf": "^6.7.5",
+    "react-native-permissions": "^4.1.5",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
@@ -37,6 +41,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-webview": "^13.10.3",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
