--- a/ios/expenseTracker/Info.plist
+++ b/ios/expenseTracker/Info.plist
@@ -40,6 +40,8 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Expense Tracker Want o use permission of MicroPhone</string>
 	<key>UILaunchStoryboardName</key>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Expense Tracker Want o use permission of storage</string>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
