--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "react-native-blob-util": "^0.19.9",
     "react-native-calendars": "^1.1305.0",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-pdf": "^6.7.5",
     "react-native-permissions": "^4.1.5",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -55,6 +55,7 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
