--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
@@ -55,6 +56,7 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
