--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-blob-util": "^0.19.9",
     "react-native-calendars": "^1.1305.0",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.41.1",
@@ -55,6 +55,7 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
