--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator='iPhone 15 Pro Max'",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start && --reset-cache",
     "test": "jest",
     "pod": "cd ios && pod install && cd .."
   },
@@ -38,6 +38,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
