--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.74.1",
     "react-native-calendars": "^1.1305.0",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-html-to-pdf": "^0.12.0",
